<?xml version="1.0"?>
<package>
    <name>stereo_auto_calib</name>
    <version>0.1.0</version>
    <description>Stereo auto calibration</description>

    <maintainer email="joonas.melin@tut.fi">Joonas Melin</maintainer>

    <license>LGPLv3</license>

    <url type="website">http://wiki.ros.org/mstereoAutoCalib</url>

    <author email="joonas.melin@tut.fi">Joonas Melin</author>


    <buildtool_depend>catkin</buildtool_depend>

    <build_depend>rospy</build_depend>
    <build_depend>std_msgs</build_depend>

    <run_depend>message_runtime</run_depend>
    <run_depend>rospy</run_depend>
    <run_depend>std_msgs</run_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- You can specify that this package is a metapackage here: -->
    <!-- <metapackage/> -->

    <!-- Other tools can request additional information be placed here -->

  </export>
</package>